--- a/工作日报.md
+++ b/工作日报.md
@@ -9,8 +9,8 @@
 * 其他：杭电面试
 
 ### 2015-10-28
-交互：沟通可视化产品的三种工作模式以及项目设置
-架构：讨论新型的ReportServer的解决方案：单一型转换为集群型、数据更新队列由文件系统转变为h2数据库
+* 交互：沟通可视化产品的三种工作模式以及项目设置
+* 架构：讨论新型的ReportServer的解决方案：单一型转换为集群型、数据更新队列由文件系统转变为h2数据库
 
 
 
