--- a/工作日报.md
+++ b/工作日报.md
@@ -1,3 +1,5 @@
+#工作日报
+胡一饭
 ## 2015-10
 ### 2015-10-26
 * 交互：沟通上周的交互设计
@@ -10,7 +12,36 @@
 
 ### 2015-10-28
 * 交互：沟通可视化产品的三种工作模式以及项目设置
-* 架构：讨论新型的ReportServer的解决方案：单一型转换为集群型、数据更新队列由文件系统转变为h2数据库
+* 架构：讨论新型的ReportServer的解决方案：单一型转换为集群型、数据更新队列的新实现方案（原先为文件系统）
+
+### 2015-10-29
+* 交互：cube生成工具的原型设计，并和UE沟通
+* 架构：讨论cubeanaly的新架构（1.将可视化产品后台的ReportServer、CubeAnaly、AutoPublishServer、jobmanager等合并成一个ensemble；2.类似于hbase，将产品发布到N个服务器上，通过一些配置，使得每个服务器扮演不同的角色；3. mdx查询在后台的分布式调度方式）
+* 其他：录制可视化和工作流的演示视频
+
+### 2015-10-30
+* 其他：例会，讨论下个月的计划
+* 学习：1. 产品经理（产品定位 功能定义 资源统筹 项目推动 效果反馈 行动方案）2. 前端技术：less和requirejs
+
+### 一周总结
+* 交互：和UE沟通可视化的原型设计（项目既是查询、查询既是图表、数据立方体既是指标、指标包括指标模式和物理数据源、指标模式对终端用户来说就是指标、一个指标只包含一个模式、模式包含多个度量和维度、一个维度下只有一个属性，项目包含三种模式：mdx模式，sql模式，rest模式），等等
+* 架构：讨论cubeanaly的分布式架构（扁平可扩展的服务器集群，每台节点都是一个zookeeper，根据配置文件的不同扮演不同的角色，如查询器、工作调度器、图表发布器，等等，且每种角色可以由多个节点扮演）
+* 其他：校招、录制演示视频
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
