--- a/可视化二期原型设计.md
+++ b/可视化二期原型设计.md
@@ -24,11 +24,11 @@
 ## 一期产品存在的问题和修改建议
 
 ### 总体界面风格1. 和大数据工作流产品的界面风格、色调保持一致。
- ![image](https://raw.githubusercontent.com/demotto/research/master/images/sb1.png =400x)2.	顶部工具栏按钮风格：调整为上方图标、下方文字，如：![image](https://raw.githubusercontent.com/demotto/research/master/images/sb2.png =40x)按钮图标：目前右侧两个图标与其他图标风格不一致![image](https://raw.githubusercontent.com/demotto/research/master/images/sb3.png =400x)3.	操作面板选项卡目前不显眼，如下。应该调整的让用户容易发现
-![image](https://raw.githubusercontent.com/demotto/research/master/images/sb4.png =400x) 4.	查询的保存右侧的保存按钮可以去掉
-![image](https://raw.githubusercontent.com/demotto/research/master/images/sb5.png =400x) 5.	数据立方体的查询查询工具栏中的按钮太多了，如下：![image](https://raw.githubusercontent.com/demotto/research/master/images/sb6.png =400x)可以去掉的按钮有：![image](https://raw.githubusercontent.com/demotto/research/master/images/sb13.png =40x) ： 全屏按钮可以隐藏到高级功能中的按钮有：  ![image](https://raw.githubusercontent.com/demotto/research/master/images/sb7.png =40x)拖拽指标和维度后自动执行查询；  ![image](https://raw.githubusercontent.com/demotto/research/master/images/sb8.png =40x)交换行和列必须要保留的按钮：![image](https://raw.githubusercontent.com/demotto/research/master/images/sb9.png =40x)右侧工具栏隐藏导出sql的按钮设置图表属性时，目前为直接输入highcharts参数的json字符串，如下：
-![image](https://raw.githubusercontent.com/demotto/research/master/images/sb10.png =400x)可以修改为让用户可以勾选的对话框。6.	发布控制台加入切换到编辑状态的按钮，按下时，下方的widgets处于可编辑状态。支持的可编辑操作有：删除widget，设置widget级联。![image](https://raw.githubusercontent.com/demotto/research/master/images/sb11.png =400x)按下可编辑按钮后，下方的每个widget框里都多处两个按钮：删除按钮和设置级联按钮，如下：
-![image](https://raw.githubusercontent.com/demotto/research/master/images/sb12.png =400x)
+ ![image](https://raw.githubusercontent.com/demotto/research/master/images/sb1.png)2.	顶部工具栏按钮风格：调整为上方图标、下方文字，如：![image](https://raw.githubusercontent.com/demotto/research/master/images/sb2.png)按钮图标：目前右侧两个图标与其他图标风格不一致![image](https://raw.githubusercontent.com/demotto/research/master/images/sb3.png)3.	操作面板选项卡目前不显眼，如下。应该调整的让用户容易发现
+![image](https://raw.githubusercontent.com/demotto/research/master/images/sb4.png) 4.	查询的保存右侧的保存按钮可以去掉
+![image](https://raw.githubusercontent.com/demotto/research/master/images/sb5.png) 5.	数据立方体的查询查询工具栏中的按钮太多了，如下：![image](https://raw.githubusercontent.com/demotto/research/master/images/sb6.png)可以去掉的按钮有：![image](https://raw.githubusercontent.com/demotto/research/master/images/sb13.png) ： 全屏按钮可以隐藏到高级功能中的按钮有：  ![image](https://raw.githubusercontent.com/demotto/research/master/images/sb7.png)拖拽指标和维度后自动执行查询；  ![image](https://raw.githubusercontent.com/demotto/research/master/images/sb8.png)交换行和列必须要保留的按钮：![image](https://raw.githubusercontent.com/demotto/research/master/images/sb9.png)右侧工具栏隐藏导出sql的按钮设置图表属性时，目前为直接输入highcharts参数的json字符串，如下：
+![image](https://raw.githubusercontent.com/demotto/research/master/images/sb10.png)可以修改为让用户可以勾选的对话框。6.	发布控制台加入切换到编辑状态的按钮，按下时，下方的widgets处于可编辑状态。支持的可编辑操作有：删除widget，设置widget级联。![image](https://raw.githubusercontent.com/demotto/research/master/images/sb11.png)按下可编辑按钮后，下方的每个widget框里都多处两个按钮：删除按钮和设置级联按钮，如下：
+![image](https://raw.githubusercontent.com/demotto/research/master/images/sb12.png)
 
 ### 指标创建向导原型图
 
